[package]
name = "the-compiler-strikes-back"
version = "0.1.0"
edition = "2024"
description = "Planet implementation developed by the TheCompilerStrikesBack group for the Advanced Programming course (2025)"
license = "MIT"
repository = "https://github.com/TheCompilerStrikesBackAP2025/TheCompilerStrikesBack"
exclude = [
    "Cargo.lock"
]

[dependencies]
common-game = "3.0.0"
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
log = "0.4.29"